# RGE

./: README.md
example/: CMakeLists.txt
example/nbproject/: configurations.xml  project.xml
example/nbproject/private/: Default.properties  configurations.xml  private.xml
example/src/: GameApplication.cpp  GameApplication.h  main.cpp
example/unix/: cmake_unix.sh
example/vs2015/: cmake_vs.bat
librge/: CMakeLists.txt
librge/RGE/: Application.cpp  Application.h  Archive.cpp  Archive.h  Core.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Sprite.cpp  Sprite.h  UI.cpp  UI.h
librge/cmake/: Config.cmake
src/: Application.cpp  Application.h  CoreBase.h  GameApplication.cpp  GameApplication.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  main.cpp
